# GeneticsHaplotype

./: .gitignore  GeneticsHaplotype.R  RgenericAll.R  Rgenetics.R  genetics_haplotype.R  haplotype.R  haplotypeExp.R  productionHistory  pullIn.sh
GeneticsHaplotype/: DESCRIPTION  NAMESPACE
GeneticsHaplotype/R/: RcppExports.R  Rdata.R  Rfunctions.R  dataAnalysis.R  mcmc.R  mcmcBinomial.R  mcmcImputation.R  mcmcLinear.R  mcmcRegression.R  pedigree.R  simulation.R  simulationModels.R  simulationModelsExample.R  zzz.R
GeneticsHaplotype/man/: GeneticsHaplotype-package.Rd
GeneticsHaplotype/src/: BitField.hpp  HaplotypeRcppModule.cpp  HaplotypeRwrappers.cpp  HaplotypeRwrappers.hpp  RcppExports.cpp  buffer.cpp  buffer.h  diplotypereconstruction.cpp  diplotypereconstruction.h  genotype.h  helpers.cpp  helpers.h  pedigree.cpp  pedigree.h  valarray_ext.cpp  valarray_ext.h
genetics_haplotype/: DESCRIPTION  NAMESPACE
genetics_haplotype/R/: RcppExports.R
genetics_haplotype/man/: genetics_haplotype-package.Rd
genetics_haplotype/src/: RcppExports.cpp
haplotypecpp/: BitField.hpp  CMakeLists.txt  buffer.cpp  buffer.h  diplotypereconstruction.cpp  diplotypereconstruction.h  genotype.h  haplotypecpp.kdev4  helpers.cpp  helpers.h  main.cpp  pedigree.cpp  pedigree.h  pullIn.sh  valarray_ext.cpp  valarray_ext.h
haplotypecpp/.kdev4/: haplotypecpp.kdev4
